@@ -8,14 +8,65 @@ filter:
 
 # <%= @page.title %>
 
-TODO:  link these up
 
-  - git parable
-  - the thing about git
-  - peepcode screencast
-  - "git internals" PDF
-  - Spolsky's "hg init" site, first page only
-  - Schwern's "Git for ages 4 and up"
-  - probably some other stuff I'm forgetting
-  - http://nfarina.com/post/9868516270/git-is-simpler
+<ul class="full-size">
+  <li>
+    <a href="http://tom.preston-werner.com/2009/05/19/the-git-parable.html">The Git Parable</a>, blog post by Tom Preston-Werner (May 2009).
+    <div class="reading-note">
+      Explains why you might want to use Git, and why it has some of the features it has.  At end, provides links to a few other resources that may be useful.
+    </div>
+  </li>
 
+  <li>
+    <a href="http://tomayko.com/writings/the-thing-about-git">The Thing About Git</a> by Ryan Tomayko (April 2008).
+    <div class="reading-note">
+      One of the best single blog posts I've ever read about Git.  Explains a lot, especially what the index is.
+    </div>
+  </li>
+
+  <li>
+    <a href="http://peepcode.com/products/git">Peepcode screencast on Git</a> ($12)
+    <div class="reading-note">
+      I found this helpful when I was completely new to Git.  Haven't revisited it in a few years.
+    </div>
+  </li>
+
+  <li>
+    <a href="https://peepcode.com/products/git-internals-pdf">Git Internals PDF</a> by Scott Chacon (also $12 via Peepcode)
+    <div class="reading-note">
+      More detail than you could ever possibly want on how Git works.  I've read maybe half of it.  It's incredible.
+    </div>
+  </li>
+
+  <li>
+    <a href="http://hginit.com/00.html">Subversion Re-Education</a> on the HgInit site
+    <div class="reading-note">
+      It's a site about Mercurial (another distributed version control system), but this one page is incredibly useful if you're coming to Git from Subversion or another centralized system.
+    </div>
+  </li>
+
+  <li>
+    <a href="http://blip.tv/open-source-developers-conference/git-for-ages-4-and-up-4460524">Git for Ages 4 and Up</a> by Michael Schwern (Flash video, 2010)
+    <div class="reading-note">
+      If you've got 45 minutes to spare, this is a great talk.  Schwern engages your kinesthetic and spatial reasoning faculties to help you understand what Git is doing.
+    </div>
+  </li>
+
+  <li>
+    <a href="http://nfarina.com/post/9868516270/git-is-simpler">Git is Simpler Than You Think</a>, blog post by Nick Farina (September 2011)
+    <div class="reading-note">
+      Chatty blog post with lots of entertaining pictures.  You'll hardly notice you're learning stuff.
+    </div>
+  </li>
+
+  <!--<% if false %>
+
+  <li>
+    <a href="xxx">xxx</a>
+    <div class="reading-note">
+      xxx
+    </div>
+  </li>
+  <% end %>
+  -->
+</ul>
