@@ -8,11 +8,11 @@ filter:
 
 ## TODO
 
-* Add reading list
 * Write section on rebase, similar to existing one on merge
 * Find and attribute sources for all images
 * Add comments (disqus, perhaps?)
 * Promote
   * twitter
   * pdxruby
+  * rubyshow
   * HN?
