@@ -52,6 +52,7 @@ filter:    erb
 			  <li><a href='/'>Home</a></li>
 			  <li><%= page_link('tldr', 'TL;DR') %></li>
 			  <li><%= section_link('about-this-site', 'About') %></li>
+			  <li><%= page_link('reading-list') %></li>
 			  <li><%= page_link('changelog') %></li>
 			  <li><%= page_link('todo') %></li>
 			</ul>
