@@ -9,5 +9,7 @@ filter:
 <% if false -%>
 <!-- Add new items at the top -->
 <% end -%>
+
+* **2011-09-28:** Linked up the reading list.
 * **2011-09-28:** add a few todo items
 * **2011-09-28:** just about ready to launch.  Added CC license, fixed top nav, added content and edited what was already there.
